qt4-x11 (4:4.8.2+dfsg-5) UNRELEASED; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Add some changes in order to determine the reason of the FTBFS on ia64:

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 16 Dec 2012 14:46:08 -0300

qt4-x11 (4:4.8.2+dfsg-4) unstable; urgency=medium

  * Really apply add_missing_map_noreserve.patch. Thanks Sune for noticing :)
    (Closes: #685524).
  * Release to unstable. Keep urgency medium because of the fix for the CRIME
    attack.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 26 Nov 2012 14:08:14 -0300

qt4-x11 (4:4.8.2+dfsg-3) unstable; urgency=medium

  * Apply disable-SSL-compression-by-default.patch. Disables SSL compression
    by default since this appears to be the a likely cause of the currently
    hyped CRIME attack. Set urgency to medium.
  * Build-conflict against libqtwebkit-dev. Upstream said that this should be
    the correct way of handling this (Closes: #689265).
  * Add fix_jit_crash_on_x86_64.patch, which avoids 32-bit branch offset
    overflows. Taken from upstream.
  * Add add_missing_map_noreserve.patch. The previous patch uncovered a bug
    that happened when memory was reserved in swap. This patch adds a missing
    MAP_NORESERVE and fixes error checking. Taken from upstream.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 23 Nov 2012 22:09:58 -0300

qt4-x11 (4:4.8.2+dfsg-2) unstable; urgency=low

  * Remove Fix-JIT-crash-on-x86-64-avoid-32-bit-branch-offset-o.patch. It seems
    that causes crashes in an hardware-dependant fashion (Closes: #685524).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 27 Aug 2012 17:54:41 -0300

qt4-x11 (4:4.8.2+dfsg-1) unstable; urgency=low

  * Add myself to Uploaders.
  * Remove non-free zlib's RFCs (Closes: #685132):
    - Add prune-nonfree to debian/rules to remove them.
    - Add a note on README.source of what we are removing from the original
      tarball.