@@ -2,6 +2,7 @@ qt4-x11 (4:4.8.2+dfsg-5) UNRELEASED; urgency=low
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Add some changes in order to determine the reason of the FTBFS on ia64:
+    - Re-allow parallel building on ia64.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 16 Dec 2012 14:46:08 -0300
 
